[package]
name = "Somni-soft"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
ethers = { version = "2.0", features = ["rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
humantime-serde = {version = "1.1.1"}
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4"
config = "0.15.11"
tokio-util = "0.7"
async-fs = "2.1.2"
reqwest = { version = "0.12.5", features = ["json", "socks", "rustls-tls"], default-features = false }
anyhow = "1.0.98"